@startuml
'https://plantuml.com/class-diagram

/'class Company{

}'/

/'
1.In a ship trip does it have legs within the route
2. How to know which container should be offloaded
3. A concept of order that relates container with shipTrip directly
makes sense to know which containers are going to be offloaded?

'/

class Ship{
    **MMSI: Integer**
    ---
    VesselTypeID: INTEGER
    IMO: varchar(10)
    CallSignId: varchar(40)
    ShipName: varchar(40)
    CurrentCapacity: NUMBER(6,2)
    Draft: NUMBER(5,2)
    Length: NUMBER(5,2)
    Width: NUMBER(5,2)
    maxCapacity: NUMBER(6,2)
}

class ShipTrip{
    **ship_trip_id: integer**
    ---
    FK mmsi: integer
    FK departure_location_id: integer
    FK arrival_location_id: integer
    FK loading_cargo_id: integer
    FK unloading_cargo_id: integer
    est_departure_date: date
    real_departure_date: date
    est_arrival_date : date
    real_arrival_date : date
}
/'class TripLeg{

}'/

/'class ContainerOrder{
    **container_order_id**
    --
    FK container_id
    FK ship_trip_id
    start_location_id
}'/

class Continent{
   ** continent_id**: integer
   ---
    continent_name: varchar(40)
}

class ShipPosition{
    **ShipPosition_id**: integer
    ---
    BaseDateTime: DATE
    Latitude: NUMBER(6,4)
    Longitude: NUMBER(7,4)
    FK_MMSI: NUMBER(9)
    Sog: NUMBER(5,2)
    Cog: NUMBER(5,2)
    Heading: NUMBER(5,2)
    Transceiver: varchar(20)
}

/' ShipPosition - BaseDateTime, MMSI'/

class Container{
    **ContainerID**: INTEGER
    --
    Payload: NUMBER(5,2)
    Tare: NUMBER(5,2)
    Gross: NUMBER(5,2)
    CheckDigit
    ISOCode: varchar(4)
}



class EnergyPower{
    **NumEnergyGenerators**:INTEGER
    FK_**MMSI**: NUMBER(9)
    ---
    GeneratorsPower: NUMBER(5,2)
}
/'refrigeration state is ambigous'/

/'manifest type(loading, unloading) changes its values'/
class CargoManifest{
    **CargoManifestID**:INTEGER
    ---
/'    FK_port_id:INTEGER
    FK_MMSI:NUMBER(9)'/
}

class PositionInVehicule{
    FK_**CargoManifestID**:INTEGER
    FK_**ContainerID**:INTEGER
    ---
    ContainerPositionInVehiculeX:INTEGER
    ContainerPositionInVehiculeY:INTEGER
    ContainerPositionInVehiculeZ:INTEGER
}

class Port {
    **portId**:INTEGER
    ---
    Name:varchar(40)
    fk_location_id: integer
}

class Warehouse {
    **warehouseId**:INTEGER
    ---
    Name:varchar(40)
    fk_location_id: integer
}

class Country{
    **Country**:varchar(70)
    ---
    Continent_id : integer
}

class PlaceLocation{
    **location_id**: integer
    ---
    locationLatitude:NUMBER(6,4)
    LocationLongitude:NUMBER(7,4)
    FK_Country:varchar(70)
}

class ContainerInCargoManifest{
    FK_** ContainerID **: INTEGER
    FK_** CargoManifestId **: INTEGER
    --
    temperature_kept: NUMBER(5,2)
}

class Shipment{
    **shipment_id**: integer
    --
    FK_container_id
    FK_shiptrip_id
}



/'class Truck{
    truckID
}

class Transports{
    truckId FK
    warehouseId FK
}'/




Ship "1" -- "1..*" Container : transports >
Ship "1" -- "1..*" ShipPosition
/'Docking "1" -- "1..2" CargoManifest'/
ShipTrip "1" -- "2" Port

Ship "1" -- "*" ShipTrip
CargoManifest "1" -- "1..*" ContainerInCargoManifest
Container "*" -- "1" ContainerInCargoManifest
/'Truck "1" -- "1..*" CargoManifest'/
/'
Truck "*" -- "1" Container
'/
Port "0..1" -- "1" CargoManifest
Warehouse "0..1" -- "1" CargoManifest
PlaceLocation "*" -- "1" Country
Continent "1" -- "1..*" Country
PlaceLocation "1" -- "1" Port
PlaceLocation "1" -- "1" Warehouse

/'Relacoes N para N, falta relacao'/
/'
Truck "1..*" -- "1..*" Warehouse
'/
/'Ship "1" -- "*" Docking'/
ShipTrip "1" -- "1..2" CargoManifest
Ship "1" -- "*" EnergyPower : has >
ContainerInCargoManifest "1..*" -- "1..*" PositionInVehicule
EnergyPower "1" -- "1..*" ContainerInCargoManifest
Container "1" -- "*" Shipment
Shipment "1..*" -- "1" ShipTrip
@enduml